prevent dropdown from covering the terms section (next section)

--- a/src/sass/components/_section.scss
+++ b/src/sass/components/_section.scss
@@ -27,7 +27,7 @@ $block: '.section';
         margin: rem(250) 0;
     }
     &--margin-xxxl {
-        margin: rem(300) 0;
+        margin: rem(400) 0;
     }
     &--margin {
         margin: rem(100) 0;
